# alwayssaved-extractor-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Pipfile  README.md  appspec.yml  dockerignore  pyproject.toml  requirements.txt  service.py
.github/workflows/: deploy.yml
dev_utils/: main.py
mock_data/: main.py
scripts/: after_install.sh  before_install.sh  start_application.sh  validate_service.sh
services/_audio_summary/: main.py
services/audio_extractor/: main.py
services/audio_summary/: main.py
services/audio_transcription/: main.py
services/aws/: s3.py  sqs.py  ssm.py
services/utils/: main.py
services/utils/mongodb/: main.py
services/utils/types/: main.py
